# fullcarts-app

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CNAME  FULLCARTS_DESIGN_EXPORT.md  PIPELINE_FIX_PLAN.md  SHRINKFLATION_DATA_SCRAPING_ASSESSMENT.md  _config.yml  fullcarts.html  index.html  plan.md  pyproject.toml  pytest.ini  reddit_public_scraper.py  reddit_scraper.py  requirements.txt  supabase_seed.sql
.claude/: launch.json
.claude/hooks/: session-start.sh
.github/workflows/: _validate_off_backfill.yml  detect_changes.yml  phase1_execution.yml  (+19 more)
backend/: config.py  requirements.txt
docs/: COMPUTER_USE.md  LOCAL_CONTINUATION.md  MANUAL_SCHEMA.md  manual_template.yaml  video-content-strategy.md
pipeline/: __init__.py  __main__.py  cli.py  config.py  requirements.txt
scripts/: build_morph.py  install_vfx.command  launch_vfx.command  make_morph.command  setup_local.command
social-video/: package-lock.json  package.json  tsconfig.json
vfx/: README.md  __main__.py  db.py  director.py  intake.py  llm.py  models.py  recommender.py  requirements.txt
vfx_instructions/: MANUAL_SCHEMA.md  README.md  build_manuals.py  effects.json  effects.jsonl  external_sources.json  ingest_video.py  manual_builder.py  schema.json  validate_manuals.py  vfx.sqlite  vfx_loader.py
video/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
videos/: .gitignore  index.html  meta.json  package-lock.json  package.json  skills-lock.json
web/: .env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
(+698 files in other folders)
